[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/tile_0084.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/effects/progressBar.png" type="Texture" id=3]
[ext_resource path="res://assets/effects/progressBarFiller.png" type="Texture" id=4]
[ext_resource path="res://assets/effects/characterSelction.png" type="Texture" id=5]
[ext_resource path="res://player/wizard.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 0.0

[node name="Wizard" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="SelectedBackground" type="TextureRect" parent="."]
margin_left = -12.0
margin_top = -12.0
margin_right = 28.0
margin_bottom = 28.0
texture = ExtResource( 5 )

[node name="wizard" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )

[node name="playerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="TurnProgressBar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -14.0
margin_right = 32.0
margin_bottom = 26.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="class" type="Node" parent="."]
script = ExtResource( 6 )

[node name="WizardTimer1" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="WizardTimer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="WizardTimer3" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="WizardTimer4" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="WizardTimer5" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="WizardTimer6" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="WizardTimer7" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="WizardTimer8" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="WizardTimer9" type="Timer" parent="."]
wait_time = 9.0
one_shot = true
autostart = true

[node name="WizardTimer10" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="WizardTimer1" to="." method="_on_WizardTimer1_timeout"]
[connection signal="timeout" from="WizardTimer2" to="." method="_on_WizardTimer2_timeout"]
[connection signal="timeout" from="WizardTimer3" to="." method="_on_WizardTimer3_timeout"]
[connection signal="timeout" from="WizardTimer4" to="." method="_on_WizardTimer4_timeout"]
[connection signal="timeout" from="WizardTimer5" to="." method="_on_WizardTimer5_timeout"]
[connection signal="timeout" from="WizardTimer6" to="." method="_on_WizardTimer6_timeout"]
[connection signal="timeout" from="WizardTimer7" to="." method="_on_WizardTimer7_timeout"]
[connection signal="timeout" from="WizardTimer8" to="." method="_on_WizardTimer8_timeout"]
[connection signal="timeout" from="WizardTimer9" to="." method="_on_WizardTimer9_timeout"]
[connection signal="timeout" from="WizardTimer10" to="." method="_on_WizardTimer10_timeout"]
